# DiscordBot

./: .gitignore  Cargo.toml  Justfile  README.md  Secrets.example.toml  deploy.sh  docker-compose.yml  justfile  run.sh
config/: config.example.toml
migrations/: .gitignore  connect.example.sh  data.sql  down.sql  schemas_up.sql  up.sql
src/: config.rs  database.rs  error.rs  event_handler.rs  global_state.rs  lib.rs  main.rs  shuttle_integration.rs  state.rs  target.rs  utils.rs
src/commands/: apistatus.rs  bmaptop.rs  bpb.rs  btop.rs  bwr.rs  db.rs  help.rs  invite.rs  map.rs  maptop.rs  mod.rs  mode.rs  nocrouch.rs  pb.rs  ping.rs  profile.rs  random.rs  recent.rs  report.rs  setsteam.rs  top.rs  unfinished.rs  wr.rs
src/commands/autocomplete/: map_names.rs  mod.rs
src/commands/custom_params/: bool_choice.rs  db_mode_choice.rs  mod.rs  mode_choice.rs  runtype_choice.rs  tier_choice.rs
src/commands/map/: map_embed.rs  mod.rs
src/commands/pagination/: mod.rs
src/commands/params/: bool.rs  mod.rs  mode.rs  runtype.rs  target.rs  tier.rs
src/database/: logs.rs  mod.rs  users.rs
src/events/: mod.rs
src/global_api/: mod.rs
src/logging/: mod.rs
